--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1 class="title">Thành Viên Tổ 2</h1>
 
     <div class="member-card">
-        <img src="images/avatar1.png" class="avatar">
+        <img src="images/Avatar.l1.jpg" class="avatar">
         <a href="#" class="name">Nguyễn Phương Diệu Linh  </a>
     </div>
 
@@ -72,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
