--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="member-card">
-        <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh">
+        <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
         <a href="#" class="name">Nguyễn Phương Khánh Linh </a>
     </div>
 
@@ -72,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
