--- a/baitap.html
+++ b/baitap.html
@@ -17,7 +17,7 @@
 
     <ul>
         <li><a href="CLB.html">Giới thiệu CLB</a></li>
-        <li><a href="#">Bài tập 2</a></li>
+        <li><a href="Thongtin.html">Thông tin CLB</a></li>
         <li><a href="#">Bài tập 3</a></li>
     </ul>
 
