--- a/Thongtin.html
+++ b/Thongtin.html
@@ -8,7 +8,7 @@
   <tr><td>
 <h2>CLB Vovinam</h2> 
 <p align=“justify”>CLB Vovinam được thành lập vào ngày 28/3/2021 với đề xuất của học sinh và sự giúp đỡ từ BGH và Đoàn viên thanh niên của trường. Ngày đầu thành với số lượng 15 học sinh hỗ trợ lên ý tưởng xây dựng CLB. Sau 7 tháng thành lập CLB chào đồng thêm 50 thành viên mới. Vì tình hình dịch bệnh nên CLB hiện tại vẫn duy trì hình thức rèn luyện, sinh hoạt online. CLB Vovinam được thành lập với mục đích tạo sân chơi, rèn luyện thể dục thể thao, năm vào đực khỏe. Là nơi giao lưu , tập luyện và trao đổi học hỏi về võ thuật và thể dục thể thao của các bạn học sinh của trường.</p>
-<img src="Vovinam.png">
+<img src="Vovinam.png" width="50%" align="center"><br><br>
   </td></tr>
   <tr><td>
     <h2>CLB Karetedo</h2>
