--- a/baitap.html
+++ b/baitap.html
@@ -18,7 +18,7 @@
     <ul>
         <li><a href="CLB.html">Giới thiệu CLB</a></li>
         <li><a href="Thongtin.html">Thông tin CLB</a></li>
-        <li><a href="#">Bài tập 3</a></li>
+        <li><a href="Lich.html"> Lịch hoạt động CLB</a></li>
     </ul>
 
 </body>
