--- a/Lich.html
+++ b/Lich.html
@@ -9,7 +9,7 @@
 			<th>Thứ 2</th><th>Thứ 3</th><th>Thứ 4</th><th>Thứ 5</th><th>Thứ 6</th>
 		</tr>		
 		<tr>
-			<td><a href="#bongda">Bóng đá</a></td>
+			<td>Bóng đá</td>
 			<td>Thầy Khải</td>
 			<td></td>
 			<td>X</td>
