--- a/Lich.html
+++ b/Lich.html
@@ -1,3 +1,5 @@
+<html>
+	<body>
 <table id="CLBTT" border="1">
 		<caption>Lịch hoạt động CLB thể thao</caption>
 		<tr style="border: 1px solid">
@@ -58,3 +60,6 @@
 		</tr>
 	</table>
 <a href="CLB.htm">Quay về trang chủ </a>
+	</body>
+</html>
+
