--- a/baitap.html
+++ b/baitap.html
@@ -10,6 +10,25 @@
         background: linear-gradient(135deg, #ffe6f2, #e6f7ff);
         min-height: 100vh;
     }
+        .back-home {
+        display: block;
+        margin-top: 25px;
+        text-align: center;
+        padding: 12px;
+        background: #e0f7fa;
+        color: #007a99;
+        font-size: 18px;
+        border-radius: 12px;
+        text-decoration: none;
+        font-weight: 600;
+        box-shadow: 0 3px 8px rgba(0,0,0,0.1);
+        transition: 0.3s;
+    }
+
+    .back-home:hover {
+        background: #c8eef2;
+        transform: translateY(-3px);
+    }
 
     .container {
         background: white;
@@ -69,6 +88,7 @@
         <li><a href="CLB.html">Giới thiệu CLB</a></li>
         <li><a href="Thongtin.html">Thông tin CLB</a></li>
         <li><a href="Lich.html"> Lịch hoạt động CLB</a></li>
+      <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
 
