--- a/Lich.html
+++ b/Lich.html
@@ -2,12 +2,12 @@
 	<body>
 <table id="CLBTT" border="1">
 		<caption>Lịch hoạt động CLB thể thao</caption>
-		<tr style="border: 1px solid">
+		<tr bgcolor="lavender">>
 			<th rowspan="2">Bộ môn</th>
 			<th rowspan="2">GV phụ trách</th>
 			<th colspan="5">Ngày</th>
 		</tr>
-		<tr>
+		<tr bgcolor="pink">
 			<th>Thứ 2</th><th>Thứ 3</th><th>Thứ 4</th><th>Thứ 5</th><th>Thứ 6</th>
 		</tr>		
 		<tr>
