--- a/Lich.html
+++ b/Lich.html
@@ -2,7 +2,7 @@
 	<body>
 <table id="CLBTT" border="1">
 		<caption>Lịch hoạt động CLB thể thao</caption>
-		<tr bgcolor="lavender">>
+		<tr bgcolor="lavender">
 			<th rowspan="2">Bộ môn</th>
 			<th rowspan="2">GV phụ trách</th>
 			<th colspan="5">Ngày</th>
