--- a/baitap.html
+++ b/baitap.html
@@ -88,6 +88,7 @@
         <li><a href="CLB.html">Giới thiệu CLB</a></li>
         <li><a href="Thongtin.html">Thông tin CLB</a></li>
         <li><a href="Lich.html"> Lịch hoạt động CLB</a></li>
+        <li><a href="banthan.html">Giới thiệu bản thân</a></li>
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
