--- a/banthan.html
+++ b/banthan.html
@@ -73,11 +73,11 @@
 
     <img src="avatar.png" class="avatar">
 
-    <h2>Mạnh Tiểu Vũ</h2>
+    <h2>Nguyễn Phương Diệu Linh</h2>
 
 <a href="tieu_su.html" class="circle blue">Tiểu sử</a>
-<a href="so_thich/index.html" class="circle red">Sở thích</a>
-<a href="uoc_mo/index.html" class="circle yellow">Ước mơ</a>
+<a href="so_thich.html" class="circle red">Sở thích</a>
+<a href="uoc_mo.html" class="circle yellow">Ước mơ</a>
 
 </body>
 </html>
