--- a/so_thich.html
+++ b/so_thich.html
@@ -7,5 +7,9 @@
 <li>Nghe nhạc</li>
 <li>Thể thao</li>
 </ul>
+  <h3>Bài hát yêu thích</h3>
+  <video src="nhacyeuthich.MOV"
+    ưidth="500"height="300"autoplay>
+  </video>
 </body>
 </html>
