--- a/banthan.html
+++ b/banthan.html
@@ -77,13 +77,19 @@
     display: flex;
     gap: 15px;                 
 }
-
+        
+.name {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 26px;
+    font-weight: 700;
+}
     </style>
 </head>
 
 <body>
     
-  <h2>Nguyễn Phương Diệu Linh</h2>
+  <h2 class="name">Nguyễn Phương Diệu Linh</h2>
     <div class="profile-row">
 <img src="avt.HEIC" class="avatar">
         <div class="button-group">
