--- a/banthan.html
+++ b/banthan.html
@@ -84,7 +84,7 @@
 
 <body>
     
-  <h2 Tóm tắt tiểu sử</h2>
+  <h2>Tóm tắt tiểu sử</h2>
       <ul>
           <li>Họ và tên: Nguyễn Phương Diệu Ling</li>
           <li>Ngày sinh:12/06/2008</li>
