--- a/banthan.html
+++ b/banthan.html
@@ -86,7 +86,7 @@
     
   <h2>Tóm tắt tiểu sử</h2>
       <ul>
-          <li>Họ và tên: Nguyễn Phương Diệu Ling</li>
+          <li>Họ và tên: Nguyễn Phương Diệu Linh</li>
           <li>Ngày sinh:12/06/2008</li>
           <li>Quê quán: Ninh Bình </li>
           <li>Cung hoàng đạo: Song tử</li>
