--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 </div>
 <div class="member-card">
         <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
-        <a href="#" class="name">Nguyễn Phương Khánh Linh </a>
+        <a href="baitap1.html" class="name">Nguyễn Phương Khánh Linh </a>
     </div>
 
    
       </body>
 
 </html>
+
 
 
 
