--- a/so_thich.html
+++ b/so_thich.html
@@ -8,8 +8,8 @@
 <li>Thể thao</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <video src="nhacyeuthich.MOV"
-    ưidth="500"height="300"autoplay>
-  </video>
+  <audio src="ghiam1.mp4"
+    controls autoplay muted>
+  </audio>
 </body>
 </html>
