--- a/so_thich.html
+++ b/so_thich.html
@@ -8,8 +8,8 @@
 <li>Thể thao</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <audio src="ghiam1.mp4a"
-    controls autoplay muted>
+ <audio controls autoplay muted>
+   <source src="ghiam1.mp4" type="audio">
   </audio>
 </body>
 </html>
