--- a/so_thich1.html
+++ b/so_thich1.html
@@ -8,8 +8,8 @@
 <li>Học ngoại ngữ</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <audio controls autoplay muted>
-   <source src="ghiam2.mp4a" type="audio">
+  <audio controls autoplay >
+   <source src="ghiam2.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
