--- a/index.html
+++ b/index.html
@@ -1,102 +1,115 @@
 <!DOCTYPE html>
-<html >
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <title>Thành Viên Tổ 2</title>
-
     <style>
-        body {
-            background: #f2f3fa;
-            font-family: Arial, sans-serif;
-            text-align: center;
+        /* Reset cơ bản */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            padding: 40px 20px;
         }
 
         .title {
-            background: #ff6b81;
+            background: linear-gradient(90deg, #ff6b81, #ff9472);
             color: white;
-            padding: 20px;
-            font-size: 30px;
-            margin: 0;
+            padding: 25px 40px;
+            font-size: 36px;
             font-weight: bold;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+            margin-bottom: 50px;
+            text-align: center;
         }
-                .member-card {
+
+        /* Container thẻ thành viên */
+        .member-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+            width: 100%;
+            max-width: 1000px;
+        }
+
+        .member-card {
             background: white;
-            width: 400px;
-            margin: 30px auto;
-            padding: 25px;
+            width: 250px;
+            padding: 20px;
             border-radius: 20px;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-              }
+            box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+            transition: transform 0.3s, box-shadow 0.3s;
+            text-align: center;
+        }
+
+        .member-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+        }
 
         .avatar {
-            width: 160px;
+            width: 140px;
+            height: 140px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #ff6b81;
+            transition: transform 0.3s;
+        }
+
+        .avatar:hover {
+            transform: scale(1.1);
         }
 
         .name {
             display: block;
-            font-size: 20px;
             margin-top: 15px;
+            font-size: 18px;
+            font-weight: 600;
+            color: #333;
             text-decoration: none;
-            color: #000;
-            font-weight: bold;
+            transition: color 0.3s, transform 0.3s;
         }
 
+        .name:hover {
+            color: #ff6b81;
+            transform: scale(1.05);
+        }
 
-                .name:hover {
-            text-decoration: underline;
+        /* Responsive */
+        @media (max-width: 600px) {
+            .member-container {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     </style>
 </head>
-
 <body>
 
     <h1 class="title">Thành Viên Tổ 2</h1>
-    <div class="member-card">
-        <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
-        <a href="baitap.html" class="name">Nguyễn Phương Diệu Linh  </a>
-</div>
-<div class="member-card">
-        <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
-        <a href="baitap1.html" class="name">Nguyễn Phương Khánh Linh </a>
+
+    <div class="member-container">
+        <div class="member-card">
+            <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
+            <a href="baitap.html" class="name">Nguyễn Phương Diệu Linh</a>
+        </div>
+
+        <div class="member-card">
+            <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
+            <a href="baitap1.html" class="name">Nguyễn Phương Khánh Linh</a>
+        </div>
     </div>
 
-   
-      </body>
-
+</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
