--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Thành Viên Tổ 2</title>
     <style>
-        /* Reset cơ bản */
         * {
             margin: 0;
             padding: 0;
@@ -12,13 +11,31 @@
         }
 
         body {
-            background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+            background: linear-gradient(to bottom, #cce0ff, #ffffff);
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             min-height: 100vh;
             padding: 40px 20px;
+            overflow-x: hidden;
+            position: relative;
+        }
+
+        /* Hiệu ứng tuyết */
+        .snowflake {
+            position: absolute;
+            top: -10px;
+            color: white;
+            font-size: 1em;
+            user-select: none;
+            pointer-events: none;
+            animation: fall linear infinite;
+        }
+
+        @keyframes fall {
+            0% { transform: translateY(0) rotate(0deg); }
+            100% { transform: translateY(100vh) rotate(360deg); }
         }
 
         .title {
@@ -31,9 +48,18 @@
             box-shadow: 0 8px 20px rgba(0,0,0,0.2);
             margin-bottom: 50px;
             text-align: center;
+            position: relative;
         }
 
-        /* Container thẻ thành viên */
+        /* Cây Noel */
+        .tree {
+            position: absolute;
+            top: -80px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 60px;
+        }
+
         .member-container {
             display: flex;
             flex-wrap: wrap;
@@ -51,6 +77,7 @@
             box-shadow: 0 10px 25px rgba(0,0,0,0.15);
             transition: transform 0.3s, box-shadow 0.3s;
             text-align: center;
+            position: relative;
         }
 
         .member-card:hover {
@@ -86,7 +113,6 @@
             transform: scale(1.05);
         }
 
-        /* Responsive */
         @media (max-width: 600px) {
             .member-container {
                 flex-direction: column;
@@ -96,6 +122,9 @@
     </style>
 </head>
 <body>
+
+    <!-- Cây Noel -->
+    <div class="tree">🎄</div>
 
     <h1 class="title">Thành Viên Tổ 2</h1>
 
@@ -111,6 +140,19 @@
         </div>
     </div>
 
+    <!-- Tuyết rơi -->
+    <script>
+        const numberOfFlakes = 50;
+        for(let i=0; i<numberOfFlakes; i++){
+            const snowflake = document.createElement('div');
+            snowflake.className = 'snowflake';
+            snowflake.style.left = Math.random() * window.innerWidth + 'px';
+            snowflake.style.animationDuration = 5 + Math.random() * 10 + 's';
+            snowflake.style.fontSize = 10 + Math.random() * 20 + 'px';
+            snowflake.innerHTML = '❄';
+            document.body.appendChild(snowflake);
+        }
+    </script>
+
 </body>
 </html>
-
