--- a/nghe_thuat.html
+++ b/nghe_thuat.html
@@ -1,2 +1,2 @@
-<h1><strong>  Câu lạc bộ Nghệ thật Trường THPT Nguyễn Bỉnh Khiêm</strong></h1>
-<img src="nghe_that.JPG">
+<h1><strong>  Câu lạc bộ Nghệ thuật Trường THPT Nguyễn Bỉnh Khiêm</strong></h1>
+<img src="nghe_thuat.JPG">
