--- a/luyentapb8.html
+++ b/luyentapb8.html
@@ -8,4 +8,4 @@
 <p>Miễn phí lắp đặt </p>
 <p> Hỗ trợ 24/7</p>
 
-<a href="CLB.html">Quay về trang chủ </a>
+<a href="index.html">Quay về trang chủ </a>
