--- a/banthan1.html
+++ b/banthan1.html
@@ -132,6 +132,6 @@
             width="500"height="300"autoplay>
         </video>
     </div>
-
+<a href="baitap1.html">Quay về trang chủ </a>
 </body>
 </html>
