--- a/baitap.html
+++ b/baitap.html
@@ -93,6 +93,8 @@
         <li><a href="thuchanhb8.html">Thực hành bài 8</a></li>
         <li><a href="luyentapb8.html"> Luyện tập bài 8 </a></li>
         <li><a href="thuchanhbai9.html"> Thực hành bài 9</a></li>
+        <li><a href="vandungb9.html"> Vận dụng bài 9 </li>
+        
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
