--- a/the_thao.html
+++ b/the_thao.html
@@ -1,2 +1,3 @@
 <h1><strong> Câu lạc bộ Thể thao Trường THPT Nguyễn Bỉnh Khiêm</strong></h1>
-<img src="the_thao.WEBP">
+<img src="the_thao.WEBP"width="50%">
+ 
