--- a/tieu_su.html
+++ b/tieu_su.html
@@ -29,7 +29,7 @@
 <li>Cung hoàn đạo:Song Tử</li>
 </ul>
   <div class="image-container">
-    <img src="a2.jpg">
+    <img src="a9.png">
     <img src="a8.jpg">
 </div>
 
