--- a/CLB.html
+++ b/CLB.html
@@ -16,7 +16,7 @@
 			<li>01 giải ba môn Bóng đá nam cấp tỉnh</li>
 			<li>01 giải nhì, 02 giải ba hội thi biểu diễn âm nhạc cấp tỉnh</li>
 		</ul>
-	  <video src="clb.mov"
+	  <video src="clb.mp4"
             width="500"height="300"autoplay>
         </video>
 <p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
@@ -58,7 +58,7 @@
 			<td></td>
 			<td></td>
 		</tr>
-		  <video src="clb2.mov"
+		  <video src="clb2.mp4"
             width="500"height="300"autoplay>
         </video>
 		<tr>
