--- a/CLB.html
+++ b/CLB.html
@@ -16,8 +16,8 @@
 			<li>01 giải ba môn Bóng đá nam cấp tỉnh</li>
 			<li>01 giải nhì, 02 giải ba hội thi biểu diễn âm nhạc cấp tỉnh</li>
 		</ul>
-	  <video src="clb.mp4"
-            width="500"height="300"autoplay>
+	  <video width="500"height="300"autoplay>
+		  <source src="clb.mp4" type="video/mp4">
         </video>
 <p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
 	<p><a href="Thongtin.html">Thông tin CLB</a></p>
@@ -58,8 +58,8 @@
 			<td></td>
 			<td></td>
 		</tr>
-		  <video src="clb2.mp4"
-            width="500"height="300"autoplay>
+		  <video width="500"height="300"autoplay>
+			  <source src="clb2.mp4" type="video/mp4>
         </video>
 		<tr>
 			<td><a href="#vothuat">Võ thuật</a></td>
