--- a/banthan1.html
+++ b/banthan1.html
@@ -128,8 +128,8 @@
         </p>
 
         <h3>Kênh yêu thích</h3>
-        <video src="kenhyeuthich1.mp4"
-            width="500"height="300"autoplay>
+        <video width="500"height="300"autoplay>
+            <source src="kenhyeuthich1.mp4" type="video/mp4">
         </video>
     </div>
 <a href="baitap1.html">Quay về trang chủ </a>
