--- a/CLB.html
+++ b/CLB.html
@@ -16,10 +16,10 @@
 			<li>01 giải ba môn Bóng đá nam cấp tỉnh</li>
 			<li>01 giải nhì, 02 giải ba hội thi biểu diễn âm nhạc cấp tỉnh</li>
 		</ul>
-	  <video width="500"height="300"autoplay controls>
+	  <video width="500"height="300" autoplay muted controls>
 		  <source src="clb.mp4" type="video/mp4">
         </video>
-	<video width="500"height="300"autoplay controls>
+	<video width="500"height="300" autoplay muted controls>
 			  <source src="clb2.mp4" type="video/mp4">
         </video>
 <p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
