--- a/banthan.html
+++ b/banthan.html
@@ -131,6 +131,15 @@
             <source src="Kenh .mp4"type="video/mp4">
         </video>
     </div>
+    <h3>Bài hát yêu thích </h3>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/HmB5x6wu79E"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+</iframe>
+    
 <a href="baitap.html">Quay về trang chủ </a>
 </body>
 </html>
