--- a/CLB.html
+++ b/CLB.html
@@ -22,6 +22,14 @@
 	<video width="500"height="300" autoplay muted controls>
 			  <source src="clb2.mp4" type="video/mp4">
         </video>
+	<h3>Trận đấu nổi bật</h3>
+	<iframe width="560" height="315"
+    src="https://www.youtube.com/embed/fIX7y4XLICc?autoplay=1&mute=1"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+</iframe>
 	
     <h2> Câu lạc bộ ngoại khoá của Trường Nguyễn Bỉnh Khiêm</h2>
     <a href="the_thao.html" target="iframe">Câu lạc bộ Thể Thao</a>
