--- a/baitap.html
+++ b/baitap.html
@@ -94,6 +94,7 @@
         <li><a href="luyentapb8.html"> Luyện tập bài 8 </a></li>
         <li><a href="thuchanhbai9.html"> Thực hành bài 9</a></li>
         <li><a href="vandungb9.html"> Vận dụng bài 9 </li>
+        <li><a href="Baitap12.html"> Bài tập 10/12 </li>
         
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
