--- a/baitap1.html
+++ b/baitap1.html
@@ -94,6 +94,7 @@
         <li><a href="luyentapb81.html"> Luyện tập bài 8 </a></li>
         <li><a href="thuchanhbai91.html"> Thực hành bài 9</a></li>
         <li><a href="vandungb91.html"> Vận dụng bài 9 </li>
+         <li><a href="Baitap12.html"> Bài tập 10/12 </li>
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
