--- a/Baitap12.html
+++ b/Baitap12.html
@@ -7,7 +7,7 @@
 
 <body>
 
-  <h1 style="color:red; text-align:center;">BÀI TẬP NHÓM ???</h1>
+  <h1 style="color:red; text-align:center;">BÀI TẬP NHÓM 2</h1>
   <h2 style="color:red; text-align:center;">ĐỊNH DẠNG CSS</h2>
 
   <p style="color:blue; text-align:justify; font-size:18px;">
